TA-204: Update the way to store priority

--- a/task-management/src/main/resources/locale/portlet/taskManagement.properties
+++ b/task-management/src/main/resources/locale/portlet/taskManagement.properties
@@ -8,6 +8,10 @@ label.tag=Tags
 label.title=Title
 label.dueDate=Due date
 label.priority=Priority
+label.priority.none=None
+label.priority.low=Low
+label.priority.normal=Normal
+label.priority.high=High
 label.status.rank=Rank
 label.rank=Rank
 label.user=User
